fix: 없는 dist 폴더 접근 막기

--- a/buildspec.dev.yml
+++ b/buildspec.dev.yml
@@ -16,4 +16,4 @@ phases:         # 빌드 단계를 정의
 
 artifacts:      # 빌드 결과물 지정 (선택)
   files:
-    - dist/**   # dist 폴더 안의 모든 파일을 결과물로 저장
+    - ./**/*   # 폴더 안의 모든 파일을 결과물로 저장
